Fix nav on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -848,7 +848,7 @@ h4.health-info-header {
         padding: 10px 0 !important;
         margin: 15px 0px;
         font-size: 16px;
-        font-weight: 300;
+        font-weight: 500;
     }
 
     .navbar-light .navbar-toggler {
